Fix whitespace

--- a/static/styles/mainpage.css
+++ b/static/styles/mainpage.css
@@ -106,7 +106,6 @@ p {
 }
 
 .info{
-    margin: 1em;
     text-align: center;
 }
 
